[gd_scene load_steps=2 format=3 uid="uid://ds7owm08rfr5l"]

[ext_resource type="Script" path="res://menu_de_pausa.gd" id="1_6scd4"]

[node name="MenuDePausa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6scd4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 357.0
offset_top = 74.0
offset_right = 519.0
offset_bottom = 245.0
scale = Vector2(2.71042, 2.61367)

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Guardar partida"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cargar partida"

[node name="ResolutionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cambiar Resolucion"

[node name="EffectsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Desactivar efectos"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Salir del menu"

[node name="StatsLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
